--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,47 @@ body{
    background-color: rebeccapurple;
 }
 
+/* HEADER */
+header{
+   background-color: white;
+   height: 60px;
+   position: fixed;
+   width: 100vw;
+   display: flex;
+   justify-content: center;
+   align-content: space-around;
+   font-family: 'Open Sans', sans-serif;
+}
+
+.boolean{
+   width: 50%;
+   display: flex;
+   line-height: 60px;
+}
+
+.logo-boolean{
+   width: 10%;
+   max-height: 60px;
+   height: 60px;
+   margin-right: 10px;
+}
+
+.logo-boolean img{
+   width: 100%;
+   height: 100%;
+}
+
+.text-boolean{
+   width: 90%;
+}
+
+/* MAIN */
 .main-wrapper{
    display: flex;
    justify-content: center;
    align-items: center;
-   height: 100vh;
+   height: calc(100vh - 60px);
+   padding-top: 60px;
 }
 
 .container{
