--- a/css/style.css
+++ b/css/style.css
@@ -15,19 +15,18 @@ header{
    position: fixed;
    width: 100vw;
    display: flex;
-   justify-content: center;
-   align-content: space-around;
+   justify-content: space-around;
    font-family: 'Open Sans', sans-serif;
 }
 
 .boolean{
-   width: 50%;
+   width: 20%;
    display: flex;
    line-height: 60px;
 }
 
 .logo-boolean{
-   width: 10%;
+   width: 20%;
    max-height: 60px;
    height: 60px;
    margin-right: 10px;
@@ -36,10 +35,29 @@ header{
 .logo-boolean img{
    width: 100%;
    height: 100%;
+   cursor: pointer;
 }
 
 .text-boolean{
-   width: 90%;
+   width: 80%;
+   cursor: pointer;
+}
+
+.difficolta{
+   height: 100%;
+   width: 20%;
+   display: flex;
+   line-height: 60px;
+}
+
+.difficolta select{
+   margin-left: 10px;
+}
+
+.difficolta button{
+   height: 20px;
+   width: 50px;
+   margin-top: 21px;
 }
 
 /* MAIN */
