--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
    box-sizing: border-box;
    margin: 0;
    padding: 0;
+   font-family: 'Open Sans', sans-serif;
 }
 
 body{
@@ -16,7 +17,6 @@ header{
    width: 100vw;
    display: flex;
    justify-content: space-around;
-   font-family: 'Open Sans', sans-serif;
 }
 
 .boolean{
@@ -72,6 +72,7 @@ header{
 .container{
    width: 500px;
    height: 500px;
+   color: white;
 }
 
 .quadrato{
