--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,14 @@ header{
    justify-content: center;
    align-items: center;
    height: calc(100vh - 60px);
-   padding-top: 60px;
+   position: relative;
+   top: 60px;
+}
+
+.main-wrapper h1{
+   position: absolute;
+   left: 330px;
+   color: white;
 }
 
 .container{
@@ -83,6 +90,7 @@ header{
    display: flex;
    justify-content: center;
    align-items: center;
+   cursor: pointer;
 }
 
 /* .easy-size{
@@ -102,4 +110,8 @@ header{
 
 .clicked{
    background-color: rgb(163, 136, 189);
+}
+
+.hidden{
+   display: none;
 }
