--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body{
    background-color: rebeccapurple;
+   overflow: hidden;
 }
 
 /* HEADER */
@@ -65,14 +66,14 @@ header{
    display: flex;
    justify-content: center;
    align-items: center;
-   height: calc(100vh - 60px);
+   height: calc(100vh - 50px);
    position: relative;
    top: 60px;
 }
 
 .main-wrapper h1{
    position: absolute;
-   left: 330px;
+   transform: translate(0%, -50%);
    color: white;
 }
 
@@ -108,6 +109,21 @@ header{
    height: calc(100% / 7);
 } */
 
+/* footer */
+
+footer{
+   height: 50px;
+   background-color: white;
+   text-align: center;
+   margin: 0 auto;
+   line-height: 50px;
+}
+
+.footer-text{
+   width: 45%;
+}
+
+/* classi che si aggiungono: */
 .clicked{
    background-color: rgb(163, 136, 189);
 }
@@ -115,3 +131,5 @@ header{
 .hidden{
    display: none;
 }
+
+
